--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -979,6 +979,10 @@ select {
   margin-top: 2rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -1766,6 +1770,16 @@ select {
 
 .text-white\/70 {
   color: rgb(255 255 255 / 0.7);
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .underline {
